<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Five">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="186dp"
            android:layout_height="135dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-3dp"
            android:layout_marginEnd="-35dp"
            android:src="@drawable/logo" />

    </RelativeLayout>

    <TextView
        android:id="@+id/editgigTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textColor="@color/Four"
        android:text="@string/edit_profile"
        android:fontFamily="@font/abril_fatface"
        android:textSize="35sp"
        android:layout_gravity="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"> <!-- Hide the scrollbar -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/Five">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_information"
                android:fontFamily="@font/abril_fatface"
                android:layout_marginTop="50dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/Four"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/nameEditTextUpdate"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_full_name"/>

            <EditText
                android:id="@+id/emailEditTextUpdate"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"/>

            <EditText
                android:id="@+id/phoneEditTextUpdate"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/enter_phone_number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/profileImageView"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="10dp"/>

                <Button
                    android:id="@+id/selectPhotoButtonUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_image"
                    android:textSize="10sp"
                    android:textColor="@color/white"
                    android:background="@drawable/button"
                    android:layout_marginStart="10dp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_information"
                android:fontFamily="@font/abril_fatface"
                android:layout_marginTop="50dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/Four"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/usernameEditTextUpdate"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_new_username"/>

            <EditText
                android:id="@+id/passwordEditTextUpdate"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/enter_new_password"/>

            <EditText
                android:id="@+id/confirmpasswordEditTextUpdate"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_width="250dp"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:hint="@string/re_enter_new_password"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/professional_information"
                android:fontFamily="@font/abril_fatface"
                android:layout_marginTop="50dp"
                android:layout_marginStart="25dp"
                android:textColor="@color/Four"
                android:textSize="24sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lawyer_type"
                android:fontFamily="@font/abril_fatface"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:textColor="@color/Four"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/lawyerTypeSpinnerUpdate"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_width="250dp"
                android:entries="@array/LawyerTypes"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/court_type"
                android:fontFamily="@font/abril_fatface"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:textColor="@color/Four"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/courtTypeSpinnerUpdate"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_width="250dp"
                android:entries="@array/CourtTypes"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/highest_license"
                android:fontFamily="@font/abril_fatface"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:textColor="@color/Four"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/highestLicenseSpinnerUpdate"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_width="250dp"
                android:entries="@array/HighestLicense"
                android:layout_height="wrap_content"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="50dp"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/LogoutButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:background="@drawable/button"
                    android:textColor="@color/white"
                    android:layout_marginBottom="30dp"
                    android:layout_marginStart="10dp"/>

                <Button
                    android:id="@+id/savechangesProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/button"
                    android:textColor="@color/white"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>


        </LinearLayout>


    </ScrollView>
</LinearLayout>
