<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Five">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="186dp"
            android:layout_height="135dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-3dp"
            android:layout_marginEnd="-35dp"
            android:src="@drawable/logo" />

    </RelativeLayout>

    <TextView
        android:id="@+id/newgigTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textColor="@color/Four"
        android:text="@string/add_new_gig"
        android:fontFamily="@font/abril_fatface"
        android:textSize="35sp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_title"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"/>

    <EditText
        android:id="@+id/descEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_description"
        android:inputType="textMultiLine"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:id="@+id/citySpinner"
        android:layout_marginTop="20dp"
        android:entries="@array/City"
        android:layout_marginStart="30dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/priceEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_hearing_fee"
        android:inputType="number"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/ibanEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_iban_number"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/BackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"/>

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_btn"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
</LinearLayout>
