<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Five">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="186dp"
            android:layout_height="135dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-3dp"
            android:layout_marginEnd="-35dp"
            android:src="@drawable/logo" />

    </RelativeLayout>

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textColor="@color/Four"
        android:text="@string/legal_eagle"
        android:fontFamily="@font/abril_fatface"
        android:textSize="35sp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/button"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/dontHaveAccounttv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
</LinearLayout>
