<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Five">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="186dp"
            android:layout_height="135dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-3dp"
            android:layout_marginEnd="-35dp"
            android:src="@drawable/logo" />

    </RelativeLayout>

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_margin="2dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/legal_eagle"
        android:textColor="@color/Four"
        android:textSize="35sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"> <!-- Hide the scrollbar -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/Five">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_information"
                android:fontFamily="@font/abril_fatface"
                android:layout_marginTop="50dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/Four"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/nameEditText"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_full_name"/>

            <EditText
                android:id="@+id/emailEditText"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"/>

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/enter_phone_number" />

            <TextView
                android:id="@+id/errorEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:textColor="@color/red"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_an_image"
                    android:textSize="18sp"
                    android:textColor="@color/Four"/>

                <Button
                    android:id="@+id/selectPhotoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_image"
                    android:textSize="10sp"
                    android:textColor="@color/white"
                    android:background="@drawable/button"
                    android:layout_marginStart="10dp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_information"
                android:fontFamily="@font/abril_fatface"
                android:layout_marginTop="50dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/Four"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/usernameEditTextSignUp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_username"/>

            <EditText
                android:id="@+id/passwordEditTextSignUp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/enter_password"/>

            <EditText
                android:id="@+id/confirmpasswordEditText"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_width="250dp"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:hint="@string/re_enter_password"/>
            <TextView
                android:id="@+id/errorPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:textColor="@color/red"
                android:visibility="invisible" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/professional_information"
                android:fontFamily="@font/abril_fatface"
                android:layout_marginTop="50dp"
                android:layout_marginStart="25dp"
                android:textColor="@color/Four"
                android:textSize="24sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lawyer_type"
                android:fontFamily="@font/abril_fatface"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:textColor="@color/Four"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/lawyerTypeSpinner"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_width="250dp"
                android:entries="@array/LawyerTypes"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/court_type"
                android:fontFamily="@font/abril_fatface"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:textColor="@color/Four"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/courtTypeSpinner"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_width="250dp"
                android:entries="@array/CourtTypes"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/highest_license"
                android:fontFamily="@font/abril_fatface"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:textColor="@color/Four"
                android:textSize="18sp"/>
            <Spinner
                android:id="@+id/highestLicenseSpinner"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_width="250dp"
                android:entries="@array/HighestLicense"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/errorFields"
                android:layout_width="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="40dp"
                android:textColor="@color/red"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

            <Button
                android:id="@+id/signupButton"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button"
                android:text="@string/sign_up"
                android:textColor="@color/white" />


        </LinearLayout>


    </ScrollView>


</LinearLayout>
